--- a/templates/addTaskTemplate.html
+++ b/templates/addTaskTemplate.html
@@ -31,10 +31,13 @@
             </div>
             <div class="assign">
                 Assigned to
-                <input class="assignContact" readonly onclick="toggleContactsDropdown()">
-                <div id="contactsDropdown" class="contacts-dropdown" style="display: none;">
+                <input class="assignContact">
+                <div id="contactsDropdown" class="contacts-dropdown">
                     <!-- Contacts will be dynamically inserted here -->
                 </div>
+            </div>
+            <div id="selectedContactsContainer" class="selected-contacts-container">
+                <!-- Selected contacts' initials will be displayed here -->
             </div>
             
         </div>
