due date now takes text input instead of using calendar

--- a/templates/addTaskTemplate.html
+++ b/templates/addTaskTemplate.html
@@ -48,7 +48,8 @@
                     Due Date 
                     <span class="red">*</span>
                 </div>
-                <input id="due" type="date" required />
+                <input required id="due"  pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}" placeholder="dd/mm/yyyy" class="inputBoardEdit width100PercMinus26Px focusBlueBorder" type="text">
+                        
             </div>
             <div id="priority" class="priority">
                 Prio
