--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -372,22 +372,24 @@ h5 {
 .button2 {
     padding-top: 16px;
     padding-bottom: 16px;
-    padding-left: 16px;
     background-color: white;
     color: black;
     border: solid 1px;
     border-color: #2A3647;
     width: 30%;
     font-size: 16px;
-    background-image: url(/img/cancel-button.png);
-    background-repeat: no-repeat;
-    background-position: 80%;
-    text-align: left;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .button2:hover {
     border-color: rgb(41,171,226);
     color: rgb(41,171,226);
+}
+
+.button2:hover .cross{
+    filter: brightness(0) saturate(100%) invert(52%) sepia(98%) saturate(407%) hue-rotate(155deg) brightness(93%) contrast(90%); 
 }
 
 .button3 {
