--- a/styles/board.css
+++ b/styles/board.css
@@ -404,6 +404,31 @@ body {
     border-radius: 0;
 }
 
+.addTaskOverlay {
+    background-color: #FFFFFF;
+    box-shadow: 0px 0px 10px 3px rgba(0,0,0,0.08);
+    width: fit-content !important;
+    margin: 0;
+    padding: 50px;
+    border-radius: 25px;
+}
+
+#addTaskTemplateH1 {
+    margin: 0;
+}
+
+#addTaskTemplateTaskWrapper {
+    margin: 0;
+}
+
+.addTaskTemplateRequiredCreate {
+    margin: 0 !important;
+}
+
+.addTaskTemplateTaskMar25 {
+    margin-left: 25px;
+}
+
 .animationRightSlideOut {
     animation: rightSlideOut 225ms forwards !important;
 }
