--- a/styles/index.css
+++ b/styles/index.css
@@ -376,6 +376,10 @@ dialog::backdrop {
     top: 15px;
 }
 
+.top45 {
+    top: 45px;
+}
+
 .rightMinus26 {
     right: -26px;
 }
@@ -394,6 +398,10 @@ dialog::backdrop {
 
 .right15 {
     right: 15px;
+}
+
+.right47 {
+    right: 47px;
 }
 
 .bot0 {
