--- a/styles/addTask.css
+++ b/styles/addTask.css
@@ -437,7 +437,9 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     }
 
     .taskWrapper {
-        overflow: scroll;
+        overflow-y: auto;
+        overflow-x: hidden;
+
     }
 
     .required {
