--- a/styles/addTask.css
+++ b/styles/addTask.css
@@ -269,7 +269,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     border-radius: 10px; 
     padding: 16px 10px 16px 10px; 
     background-color: rgba(255, 255, 255, 1);
-    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.1);
     display:flex; 
     align-items: center;
     justify-content: center;
@@ -277,6 +276,12 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     font-size: 20px;
     font-weight: 400;
     cursor: pointer;
+    border: none;
+    box-shadow: 0px 0px 4px 0px #0000001A;
+}
+
+.prio button:hover {
+    box-shadow: 0px 4px 4px 0px #00000040;
 }
 
 .active {
