--- a/templates/addTaskTemplate.html
+++ b/templates/addTaskTemplate.html
@@ -54,8 +54,8 @@
             <div id="priority" class="priority">
                 Prio
                 <div class="prio">
-                    <div><button type="button" onclick="activateButton('urgent')" id="urgent">urgent <img id="urgentImage" src="../img/prio alta.png"></button></div>
-                    <div><button type="button" onclick="activateButton('medium')" id="medium">medium <img src="../img/Capa 2.png"></button></div>
+                    <div><button type="button" onclick="activateButton('urgent')" id="urgent">urgent <img src="../img/prio alta.png"></button></div>
+                    <div><button type="button" onclick="activateButton('medium')" id="medium">medium <img src="../img/mediumPrio.png"></button></div>
                     <div><button type="button" onclick="activateButton('low')" id="low">low <img src="../img/Capa 1.png"></button></div>
                   </div>
             </div>
