--- a/styles/addTask.css
+++ b/styles/addTask.css
@@ -175,6 +175,10 @@ body {
     cursor: pointer;
 }
 
+.contact-option:hover {
+    background-color: rgb(0, 0, 0, 0.1);
+}
+
 .contact-option.selected {
     background-color: rgba(9, 25, 49, 1);
     color: rgba(255, 255, 255, 1);
