--- a/templates/addTaskTemplate.html
+++ b/templates/addTaskTemplate.html
@@ -74,7 +74,7 @@
             </div>
             <div class="subtasks">
                 <div><p>Subtasks</p></div>
-                <input id="subtasks" type="text" placeholder="Add new subtask" onkeypress="addSubtask(event)" />
+                <input id="subtasks" type="text" placeholder="Add new subtask" onkeypress="addSubtask(event)">
                 </div>
                 <div class="subList"><ul id="subtasksList"></ul></div>
               
