--- a/templates/addTaskTemplate.html
+++ b/templates/addTaskTemplate.html
@@ -47,7 +47,7 @@
                 <div>
                     <p>Due Date<span class="red">*</span></p>
                 </div>
-                <input required id="due"  pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}" placeholder="dd/mm/yyyy" class="inputBoardEdit width100PercMinus26Px focusBlueBorder" type="text">
+                <input required id="due" pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}" placeholder="dd/mm/yyyy" class="inputBoardEdit width100PercMinus26Px focusBlueBorder addTaskOverlayDateInput" type="text">
                         
             </div>
             <div id="priority" class="priority">
