createTask type submit

--- a/templates/addTaskTemplate.html
+++ b/templates/addTaskTemplate.html
@@ -88,7 +88,7 @@
             </div>  
             <div class="create">
                 <button type="reset" class="clear" onclick="clearInput()">Clear <img class="crossAddTask" src="../img/iconoir_cancel.png"></button>
-                <button type="button" onclick="createTask()" class="createTask">Create Task <img src="../img/check.png"></button>
+                <button type="submit" class="createTask">Create Task <img src="../img/check.png"></button>
             </div>
         </div>
     </div>
