overlay click event

--- a/templates/addTaskTemplate.html
+++ b/templates/addTaskTemplate.html
@@ -18,7 +18,7 @@
     <div w3-include-html="/templates/navBar.html"></div>
     <div w3-include-html="/templates/header.html"></div>
  
-    <div class="main-add-task-container">
+    <div id="main-add-task-container" class="main-add-task-container">
         <div id="addTaskTemplateH1" class="addTask">Add Task</div>
         <div id="addTaskTemplateTaskWrapper" class="taskWrapper">
         <div class="taskFrame ">
